--- a/kadai1.css
+++ b/kadai1.css
@@ -13,7 +13,8 @@ header{
 
 main{
   width: 960px;
-  padding: 50px;
+  padding-top : 50px;
+  padding-bottom : 50px;
   margin: 0 auto;
 }
 
@@ -68,22 +69,22 @@ footer{
   main{
   width: 100%;
   margin: 0 auto;
-}
+  }
 .contents{
   display: block;
 }
 .stepbox{
-  width: 100%;
-  margin-bottom: 4%;
+  width: 90%;
+  margin: 0 auto 20px;
   padding :2%;
   display:  block;
 }
 .stepbox:last-child {
-  margin-right: 0;
+  margin: 0 auto;
 }
 .main-item{
   width: 100%;
-  height: auto; 
+  height: 150px; 
 }
 .text{
   width: 100%;
